--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,6 +15,11 @@
         <main>
             <h2>{{ .Title }}</h2>
             {{ .Content }}
+            <ul>
+            {{ range (where site.RegularPages "Type" "in" "operatingsystems") }}
+                <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+            {{ end }}
+            </ul>
         </main>
 
         <footer>
